crates/test-files/fixtures/compile_errors/circular_dependency_create.fe
use std::context::Context

contract Foo {
    pub fn bar(ctx: Context) -> address {
        let foo: Foo = Foo.create(ctx, 0)
        return address(foo)
    }
}
